--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     </head>
     <body>
-        <header class="fixed-bar"> <h1 class="page-title">My World</h1> </header>
+        <header class="fixed-bar">
+             <h1 class="page-title">My World</h1>
+             </header>
         <nav>
             <ul class="navigation">
                 <li>Home</li>
@@ -22,18 +24,18 @@
                 <p>Lebap in Turkmenbat</p>
             </div>
             <div class="trip-images">
-                <img src="images/Ashgabat.jpg" alt="Image of the San Francisco streets">
-                <img src="images/picture.jpg" alt="Image of the California streets">
+                <img src="images/Ashgabat.jpg" alt="Image of the Ashgabat">
+                <img src="images/picture.jpg" alt="Image of the Turkmenabat">
             </div>
             <p class="feedback">Do people like my Page</p>
         </main>
         <footer>
             <div class="review-clients">
-                <img src="images/image-max.png" alt="Image of Max">
+                <img src="images/image-max.png" alt="Image of Meret">
                 <p>Meret - Awesome page, great work, keep it up!</p>
             </div>
             <div class="review-clients">
-                <img src="images/image-manu.png" alt="Image of Manu">
+                <img src="images/image-manu.png" alt="Image of Aman">
                 <p>Aman - Looks really nice, beautiful pictures!</p>
             </div>
         </footer>
